--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,6 @@
+/*https://www.youtube.com/watch?v=DZg6UfS5zYg*/
+
+
 .menu-wrapper{
     position: fixed;
     top: 0;
@@ -11,8 +14,8 @@
     right: 0;
     z-index: 2;
     cursor: pointer;
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     opacity: 0;
 }
 
@@ -21,10 +24,12 @@
     top: 0;
     right: 0;
     z-index: 1;
-    width: 60px;
-    height: 60px;
+    width: 45px;
+    height: 45px;
     padding: 1rem;
+    /*
     background-color: var(--primary-color);
+    */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -36,7 +41,7 @@
     position: relative;
     width: 100%;
     height: 2px;
-    background-color: #fff;
+    background-color: grey;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -64,4 +69,86 @@
 /* Toggler animate */
 .menu-wrapper .toggler:checked + .hamburger > div{
     transform: rotate(135deg);
+}
+
+/* Turn lines into X */
+.menu-wrapper .toggler:checked + .hamburger > div:before,
+.menu-wrapper .toggler:checked + .hamburger > div:after {
+    top: 0;
+    transform: rotate(90deg);
+}
+
+/* Rotate on hover when checked */
+.menu-wrapper .toggler:checked:hover + .hamburger > div {
+    transform: rotate(225deg);
+}
+
+
+/* Show menu */
+.menu-wrapper .toggler:checked ~ .menu {
+    visibility: visible;
+}
+
+/* Ease in nav menu */
+.menu-wrapper .toggler:checked ~ .menu > div {
+    transform: scale(1);
+    transition-duration: var(--menu-speed);
+}
+
+/* Ease in links */
+.menu-wrapper .toggler:checked ~ .menu > div > div {
+    opacity: 1;
+    transition: opacity 0.4s ease;
+}
+
+
+.menu-wrapper .menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu-wrapper .menu > div {
+    background: var(--overlay-color);
+    /*
+    border-radius: 0%; !* evtl. anpassen *!
+    */
+    width: 200vw;
+    height: 200vh;
+    display: flex;
+    flex: none;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0);
+    transition: all 0.4s ease;
+}
+
+.menu-wrapper .menu > div > div {
+    text-align: center;
+    max-width: 90vw;
+    max-height: 100vh;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+}
+
+.menu-wrapper .menu > div > div > ul > li {
+    /* don't display bullet points */
+    list-style: none;
+    color: black;
+    font-size: 1.5rem;
+    /* space between the nav items */
+    padding: 1rem;
+}
+
+.menu-wrapper .menu > div > div > ul > li > a {
+    color: black;
+    text-decoration: none;
+    transition: color 0.4s ease;
 }
