--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 :root{
-    --overlay-color: rgba(225,225, 225, 0.85);
+    --overlay-color: rgba(225,225, 225, 0.9);
     --menu-speed: 0.75s;
 }
 
@@ -133,6 +133,7 @@ li {
 .grid-wrapper {
     /*changed the height from 100% to auto as the layout breaks when the height of the content 'overflows'*/
     height: auto;
+    margin-top: 15vh;
     display: grid;
     grid-template-rows: min-content auto min-content;
 }
@@ -185,15 +186,25 @@ p {
 
 }
 
-
-.cards {
-    flex-grow: 1;
+/* https://www.w3schools.com/howto/howto_css_cards.asp*/
+.card {
+    /*flex-grow: 1;
     text-align: center;
     margin: 5px;
     border-color: grey;
     border-style: outset;
-    border-width: 2px;
+    border-width: 2px;*/
+    /* Add shadows to create the "card" effect */
+    height: 250px;
+    flex-grow: 1;
+    text-align: center;
+    margin: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+
 }
+
 
 .flex-item {
     flex-grow: 1;
@@ -208,6 +219,17 @@ p {
 #flex-item-home{
     text-align: left;
 }
+
+ul {list-style: none}
+
+.card li::before {content: "•"; color: #6D55D6; display: inline-block; width: 1em;
+    margin-left: -1em}
+
+span {
+    font-weight: bold;
+}
+
+
 
 footer {
     background-color: lightgray;
