--- a/css/menu.css
+++ b/css/menu.css
@@ -152,3 +152,7 @@
     text-decoration: none;
     transition: color 0.4s ease;
 }
+
+.menu-wrapper .menu > div > div > ul > li > a:hover {
+   font-weight: bold;
+}
