--- a/css/menu.css
+++ b/css/menu.css
@@ -10,17 +10,19 @@
 
 .menu-wrapper .toggler{
     position: absolute;
+    margin-right: 0.5vw;
     top: 0;
     right: 0;
     z-index: 2;
     cursor: pointer;
-    width: 35px;
-    height: 35px;
+    width: 60px;
+    height: 50px;
     opacity: 0;
 }
 
 .menu-wrapper .hamburger {
     position: absolute;
+    margin-right: 0.5vw;
     top: 0;
     right: 0;
     z-index: 1;
@@ -41,7 +43,7 @@
     position: relative;
     width: 100%;
     height: 2px;
-    background-color: grey;
+    background-color: #5D5D5D;
     display: flex;
     align-items: center;
     justify-content: center;
