--- a/css/main.css
+++ b/css/main.css
@@ -2,70 +2,11 @@
     --menu-speed: 0.75s;
 }
 
-/** {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-
-}*/
-
-/*
-body {
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.4;
-}
-
-.container {
-    max-width: 960px;
-    margin: auto;
-    overflow: hidden;
-    padding: 0 3rem;
-
-}
-
-.showcase{
-    background-color: var(--primary-color);
-    color: #fff;
-    height: 100vh;
-    /*
-    because overflow is absolute positioned
-
-    position: relative;
-}
- */
-
-
-/*.showcase:before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-
-showcase .showcase-inner{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 100%;
-}
-*!*/
-
-
-
-
-
-
-
 html {
     height: 100%;
     width: 80%;
    /* font-family: circular std, sans-serif; */
-    font-family: railway , sans-serif;
+    font-family: raleway , sans-serif;
 }
 
 
@@ -88,6 +29,7 @@ body {
      */
     grid-template-rows: min-content auto min-content ;
     grid-template-columns: 100%;
+    line-height: 1.5;
 
 }
 
@@ -110,25 +52,6 @@ header ul {
     }
 }
 
-
-/*ul,
-li {
-    margin: 0;
-    padding: 0;
-}*/
-
-/*li {
-    display: inline-block;
-    padding: 10px;
-}*/
-
-/*.nav {
-    height: 80px;
-    display: flex;
-    align-items: center;
-    text-align: right;
-}*/
-
 .grid-wrapper {
     /*changed the height from 100% to auto as the layout breaks when the height of the content 'overflows'*/
     height: auto;
@@ -146,10 +69,11 @@ main {
 
 .child-grid {
     display: grid;
-    width: 80vw;
+    width: 60vw;
     /*border: 1px black solid;*/
     margin: 5px;
     padding: 10px;
+    text-align: justify;
 }
 
 h1 {
@@ -160,7 +84,7 @@ h1 {
 
 
 p {
-    color: black;
+    color: #5D5D5D;
     font-weight: 100;
     font-size: 20px;
     margin-top: 25px;
@@ -176,6 +100,10 @@ p {
     height: 250px;
 }
 
+#img_profile {
+    height: 250px;
+    width: 257px;
+}
 .flex-wrapper{
     display: flex;
     margin: 0px;
@@ -189,12 +117,6 @@ p {
 
 /* https://www.w3schools.com/howto/howto_css_cards.asp*/
 .card {
-    /*flex-grow: 1;
-    text-align: center;
-    margin: 5px;
-    border-color: grey;
-    border-style: outset;
-    border-width: 2px;*/
     /* Add shadows to create the "card" effect */
     height: 250px;
     flex-grow: 1;
@@ -206,24 +128,55 @@ p {
 
 }
 
+.card-header {
+    margin-top: 0;
+    height: 10%;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+
+}
+
 
 .flex-item {
     flex-grow: 1;
     text-align: center;
     margin: 0px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
    /* border-color: black;
     border-style: solid;
     border-width: 1px;*/
 }
 
-#flex-item-home{
+#text-left {
     text-align: left;
 }
 
-ul {list-style: none}
 
-.card li::before {content: "•"; color: #6D55D6; display: inline-block; width: 1em;
-    margin-left: -1em}
+
+ul {
+    width: auto;
+    list-style: none;
+    color: #5D5D5D;
+    font-weight: 100;
+    font-size: 20px;
+    /* margin-top: 8px;*/
+    margin: 0;
+    /* removes white space of list items to the left side */
+    padding: 0;
+}
+
+li {
+    display: inline-block;
+    margin: 10px;
+}
+
+
+ li::before {content: "•"; color: #6D55D6; display: inline-block; width: 1em;
+    margin-left: 1em}
 
 span {
     font-weight: bold;
@@ -250,7 +203,7 @@ footer {
 }
 
 #socialmedia-icons{
-    margin: 10px;
+    margin: 20px;
     padding: 20px;
 }
 
@@ -261,16 +214,29 @@ button{
     border-radius: 5px;
     border-color: #6D55D6;
     border-style: solid;
-    text-align: left;
-    text-decoration: black;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 
 }
 
+
+button:hover,
+button:hover > .button-link{
+    color: white;
+    background-color: #6D55D6;
+}
+
+
 .button-link {
+    width: 200px;
+    height: 50px;
     text-decoration: none;
     color: #6D55D6;
     font-size: 20px;
 }
+
 
 .button-div{
     display: grid;
@@ -291,6 +257,13 @@ button{
 }
 
 
+#img_messaging {
+    margin-top: 70px;
+    width: 345px;
+    height: 250px;
+}
+
+
 
 @media only screen and (max-width: 850px) {
     /*changes to code to arrange aside below article. */
@@ -308,7 +281,6 @@ button{
     .flex-wrapper {
         flex-direction: column;
     }
-
 }
 
 
