--- a/css/main.css
+++ b/css/main.css
@@ -72,10 +72,26 @@ main {
     display: grid;
     width: 60vw;
     /*border: 1px black solid;*/
-    margin: 5px;
     padding: 10px;
     text-align: justify;
 }
+
+.child-grid-home {
+    display: grid;
+    width: 60vw;
+    /*border: 1px black solid;*/
+    padding: 10px;
+    grid-template-columns: 60% 40%;
+    text-align: left;
+    align-items: center;
+    justify-content: center;
+}
+
+#img_profile_div {
+    text-align: justify;
+
+}
+
 
 h1 {
     font-size: 40px;
@@ -83,6 +99,11 @@ h1 {
     color: black;
 }
 
+h1 {
+    font-size: 30px;
+    font-weight: 400;
+    color: black;
+}
 
 p {
     color: #5D5D5D;
@@ -107,17 +128,15 @@ font-size: 15px;
 }
 
 #img_profile {
-    height: 250px;
-    width: 257px;
+    height: 200px;
+    width: 200px;
 }
 .flex-wrapper{
     display: flex;
   /* border-color: black;
     border-style: solid;
     border-width: 2px;*/
-    text-align: center;
-    align-items: center;
-   justify-content: center;
+    text-align: justify;
 
 }
 
@@ -147,9 +166,7 @@ font-size: 15px;
 
 .flex-item {
     flex-grow: 1;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+    text-align: justify;
 }
 
 #flex-item-home {
@@ -293,9 +310,13 @@ button:hover > .button-link{
         flex-direction: column;
     }
 
-    .flex-wrapper {
-        flex-direction: column;
+
+    .child-grid-home {
+    text-align: center;
+            display: flex;
+            flex-direction: column;
     }
+
 
 
     #flex-item-home {
