--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ header ul {
 .grid-wrapper {
     /*changed the height from 100% to auto as the layout breaks when the height of the content 'overflows'*/
     height: auto;
-    margin-top: 15vh;
+    margin-top: 30px;
     display: grid;
     grid-template-rows: min-content auto min-content;
 }
@@ -81,6 +81,7 @@ main {
     width: 60vw;
     /*border: 1px black solid;*/
     padding: 10px;
+    margin-top: 0px;
     grid-template-columns: 60% 40%;
     text-align: left;
     align-items: center;
