--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,18 @@ main {
     justify-content: center;
 }
 
+.child-grid-contact {
+    display: grid;
+    width: 60vw;
+    /*border: 1px black solid;*/
+    padding: 10px;
+    margin-top: 0px;
+    grid-template-columns: 60% 40%;
+    text-align: justify;
+    align-items: center;
+    justify-content: center;
+}
+
 #img_profile_div {
     text-align: justify;
 
@@ -318,6 +330,10 @@ button:hover > .button-link{
             flex-direction: column;
     }
 
+    .child-grid-contact {
+            display: flex;
+            flex-direction: column;
+    }
 
 
     #flex-item-home {
