Align text left for mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,10 @@ margin-top: 25px;
     #flex-item-home {
         text-align: center;
     }
+
+    main p {
+    text-align: left;
+    }
 }
 
 
