--- a/css/main.css
+++ b/css/main.css
@@ -216,12 +216,12 @@ ul {
 
 li {
     display: inline-block;
-    margin: 10px;
+    margin: 10px 10px 10px 0px;
 }
 
 
  li::before {content: "•"; color: #6D55D6; display: inline-block; width: 1em;
-    margin-left: 1em}
+  }
 
 span {
     font-weight: bold;
@@ -344,6 +344,10 @@ margin-top: 25px;
 
     main p {
     text-align: left;
+    }
+
+    li {
+        display: block;
     }
 }
 
