--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,16 @@ p {
     grid-column: 3/7;
 }
 
+footer {
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background: #fff;
+    box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.05);
+    padding: 10px;
+}
+
 #home {
     margin-top: 100px;
 }
