Edit text color of h1

--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,6 @@ section {
     width: 86px;
 }
 
-h1 {
-    font-size: 16px;
-}
 h3 {
 
     font-family: Roboto;
@@ -50,7 +47,7 @@ h1 {
     font-weight: 900;
     font-size: 30px;
     line-height: 40px;
-    color: #8E74FF;
+    color: #4CBFA4;
 }
 
 h2 {
