Change section headlines, add profile image

--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@
 /* mobile styles */
 
 #profile-img {
-    height: 372px;
     width: 100%;
+    height: auto;
 
 }
 
@@ -48,10 +48,6 @@ section {
     src: url('../assets/fonts/Roboto-Black.ttf');
 }
 
-/* text */
-#contact-headline-underline {
-    width: 86px;
-}
 
 h3 {
 
@@ -96,9 +92,6 @@ p {
     color: #8F8F8F;
 }
 
-#projects-headline-underline {
-    width: 90px;
-}
 
 .section-headline-div {
     height: 36px;
@@ -107,12 +100,22 @@ p {
 }
 
 .section-headline-underline {
-    position: relative;
-    width: 105px;
     height: 6px;
     background: #9AEDD9;
     margin-top: -15px;
     z-index: -1;
+}
+
+#section-headline-underline-about {
+    width: 100px;
+ }
+
+#section-headline-underline-projects {
+    width: 120px;
+}
+
+#section-headline-underline-contact {
+    width: 120px;
 }
 
 .text-link {
@@ -376,9 +379,27 @@ nav {
         margin: 25px auto;
     }
 
-    .section-headline-underline {
-        width: 110px;
+    #section-text-about {
+        grid-row: 2;
+        grid-column: 2/5;
+
     }
+
+    #profile-img {
+        width: 302px;
+        height: 403px;
+
+    }
+
+    #profile-img-div {
+        grid-column: 5/8;
+        /*text-align: center;
+        justify-content: center;
+        align-items: center;*/
+        grid-row: 2;
+        margin-top: 60px;
+    }
+
 
     /* large tablets & laptop styles */
     @media screen and (min-width: 960px)  {
@@ -399,17 +420,6 @@ nav {
         #home-img-div {
             grid-column: 3/5;
             margin: 10vh auto;
-        }
-
-        .section-headline-underline {
-            position: relative;
-            width: 105px;
-            height: 6px;
-            background: #9AEDD9;
-            margin-top: -15px;
-            z-index: -1;
-            visibility:visible;
-
         }
 
     }
