--- a/css/style.css
+++ b/css/style.css
@@ -219,11 +219,6 @@ p {
 
 /* structure elements */
 
-#contact-img {
-    align-self: center;
-    grid-column: 3/7;
-}
-
 footer {
     width: 100%;
     top: 0;
@@ -248,21 +243,18 @@ footer {
     align-items: center;
 }
 
-.home-text {
-    grid-column: 2/8;
-    text-align:left;
-}
-
-/*.home-text a {
-    margin: 20px 0; !* 20px top and bottom, 0 left and right *!
-}*/
-
 #contact-img-div {
+    grid-row: 2;
     grid-column: 2/8;
     text-align: center;
     justify-content: center;
     align-items: center;
     margin-top: 25px;
+}
+
+.home-text {
+    grid-column: 2/8;
+    text-align:left;
 }
 
 .grid {
@@ -329,10 +321,6 @@ nav {
     #home-img {
         height: 250px;
         width: 386px;
-    }
-
-    #contact-img {
-        text-align: center;
     }
 
     #instagram-sunset-img {
@@ -458,11 +446,6 @@ nav {
             width: 150%;
             grid-column: 5/7;
             margin-top: -25vh;
-        }
-
-        #contact-img {
-            align-self: center;
-            grid-column: 5/8;
         }
 
 
