--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@
     grid-column: 2/8;
     text-align: center;
     justify-content: center;
-    align-items: center;
     grid-row: 2;
     margin-top: 25px;
 }
@@ -377,12 +376,7 @@ nav {
     }
 
     #profile-img-div {
-        grid-column: 5/8;
-        /*text-align: center;
-        justify-content: center;
-        align-items: center;*/
-        grid-row: 2;
-        margin-top: 60px;
+        margin: 0;
     }
 
 
@@ -400,6 +394,18 @@ nav {
 
         p, .text-link{
             font-size: 22px;
+        }
+        #profile-img-div {
+            grid-column: 5/8;
+            text-align: center;
+            justify-content: center;
+            grid-row: 2;
+            margin: 0;
+        }
+
+        #profile-img {
+            height: 503px;
+            width: 377px;
         }
 
     }
