--- a/css/style.css
+++ b/css/style.css
@@ -251,8 +251,8 @@ footer {
 }
 
 #home-img {
-    width: 100%;
-    height: 100%;
+    width: 98%; /* prevent image scrolling by not setting size to 100% */
+    height: 98%;
 }
 
 .home-text {
