Turn button group into a grid itself

--- a/css/style.css
+++ b/css/style.css
@@ -159,8 +159,13 @@ p {
 /* buttons */
 
 .button-group {
-    text-align: center;
+    /*text-align: center;*/
+    display: grid;
+    /*grid-template-columns: repeat(2, 1fr);*/
+    grid-gap: 0.5em;
 }
+
+/* TODO Create class button */
 
 
 .primary-button {
@@ -177,7 +182,6 @@ p {
     padding: 10px 20px 10px 20px;
     width: 100%;
     border-radius: 10px;
-    display: inline-block;
 }
 
 .primary-button:hover {
@@ -202,7 +206,6 @@ p {
     color: #4CBFA4;
     padding: 10px 34px 10px 34px;
     border-radius: 10px;
-    display: inline-block;
 }
 
 .secondary-button:hover {
@@ -388,6 +391,21 @@ nav {
         grid-row: 2;
         grid-column: 5/8;
         margin: 0;
+    }
+
+    .button-group {
+        grid-template-columns: repeat(2, 1fr);
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .primary-button {
+        grid-row: 1;
+    }
+
+    .secondary-button {
+        grid-row: 1;
     }
 
     /* large tablets & laptop styles */
